--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>CI/CD</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/league_custom.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/monokai.css">
+		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -25,8 +25,43 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<small>Propuesta para</small>
+
+					<h1>CI/CD</h1>
+
+					<h3>Integración Continua y Entrega/Despliegue Continuo</h3>
+
+					<small>por Carlos Brighton</small>
+				</section>
+
+				<section>
+					<section>
+						<h2>¿Qué es la Integración Continua y la Entrega/Despliegue Continuo?</h2>
+					</section>
+
+					<section>
+						<h3>Integración Continua</h3>
+
+						<p>
+							La Integración Continua (<strong>CI</strong>) es una práctica del desarrollo de software en
+							la que los cambios hechos en el código se integran más seguido a un repositorio central el
+							cuál es el encargado de <strong>ejecutar diferentes pilas de pruebas</strong>
+						</p>
+					</section>
+
+					<section>
+						<h3>Entrega Continuo</h3>
+
+						<p>
+							Es una mitad del (<strong>CD</strong>) en el cuál
+						</p>
+					</section>
+
+					<section>
+						<h3>Despliegue Continuo</h3>
+					</section>
+				</section>
 			</div>
 		</div>
 
